# VideoPlayer

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  cut.sh  imgui.ini  install.sh  run.sh  transform.sh
cmake/: FindFFmpeg.cmake  Packages.cmake
include/emscripten/: emscripten_mainloop_stub.h
include/ffmpeg/: recorders.hpp  video_player.hpp
include/ffmpeg/actions/: pause.hpp
include/fonts/: fonts.hpp
include/opengl/context/: context.hpp
include/opengl/drawers/frame/: drawer.hpp  drawer_yuv420.hpp  drawer_yuv444.hpp
include/opengl/drawers/overlay/: drawer.hpp
include/opengl/drawers/overlay/components/: component.hpp  controller.hpp
include/opengl/drawers/overlay/components/animated/: animated.hpp  backward.hpp  forward.hpp  pause.hpp
include/opengl/keyhandler/: keyhandler.hpp
include/opengl/shaders/: shader.hpp  texture_shader.hpp
include/types/: constants.hpp  types.hpp
include/utils/: utils.hpp
shaders/: image.vs.es.glsl  image.vs.glsl  image_yuv420.fs.es.glsl  image_yuv420.fs.glsl  image_yuv444.fs.glsl
src/: main.cpp
src/ffmpeg/: recorders.cpp  video_player_file.cpp  video_player_io.cpp
src/ffmpeg/actions/: pause.cpp
src/fonts/: fonts.cpp
src/opengl/context/: glfw.cpp  imgui.cpp  opengl.cpp
src/opengl/drawers/frame/: drawer.cpp
src/opengl/drawers/overlay/: controller.cpp  drawer.cpp
src/opengl/drawers/overlay/animated/: animated.cpp  backward.cpp  forward.cpp  pause.cpp
src/opengl/keyhandler/: keyhandler.cpp
src/opengl/shaders/: shader.cpp  texture_shader.cpp
src/types/: constants.cpp  types.cpp
src/utils/: utils.cpp
